--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "connected-react-router": "^6.8.0",
         "cross-env": "^7.0.2",
         "csound-manual-react": "^1.0.0-alpha16",
+        "csound-wasm": "^6.15.0-5",
         "css-loader": "4.3.0",
         "d3-scale": "^3.2.2",
         "dom-to-image-more": "^2.8.0",
